duicontrolpanel (0.11.0~unreleased) unstable; urgency=low

  * new version
  * Changes: applet categories became declarative (non-hardcoded)

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 16 Dec 2010 15:01:43 +0100

duicontrolpanel (0.10.0) unstable; urgency=low

  * Changes: runs most binary applets in separate process
  * Implemented: SWP#DUI-4492
  * New: Help button support for meego
  * Updates icon ids to spec 0.7
  * Changes: removes meegotestrunner dependency from unit tests

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 14 Dec 2010 10:29:45 +0100

duicontrolpanel (0.9.8) unstable; urgency=low

  * Fixes: NB#210162 - Wrong logical ID & Icon on Sync & Backup on
    control panel maintranslations.cpp

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 07 Dec 2010 16:21:29 +0100

duicontrolpanel (0.9.7) unstable; urgency=low

  * Fixes: NB#203963 - duicontrolpanel calls MTheme::loadCSS()
  * Added new interface for creating stylable applets
  * Fixes: NB#208452 - Category view is still down the page on reopening
    it
  * Fixes: NB#206199 - Controlpanel constructs the brief, even if not
    needed

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 01 Dec 2010 11:43:09 +0100

duicontrolpanel (0.9.6) unstable; urgency=low

  * Changes: adds DBus method "appletName (QStringList)" so that search
    becomes able to pop up the applets
  * Changes: adds credential for devicelock::DeviceLockControl
  * Changes: Added parameter "-nobriefs" which disables using dynamic
    value lines on applet icons
  * Fixes: NB#208104 - Reset and clear device buttons are not seen in
    settings main view

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 29 Nov 2010 16:09:11 +0100

duicontrolpanel (0.9.5) unstable; urgency=low

  [ Robert Manner ]
  * Fixes lintian errors
  * Restores protection for segfaulting briefs: helper process gets
    restarted and does not try to reload the bad applet
  * Fixes: background theme id

  [ Sandor Pinter ]